--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html>
 <head>
-    <title> page </title>
+    <title> main page </title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/style.css">
