--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="main-container">
-        <div class="blockA">
+        <div class="blockAA">
              <div class="a">
              <p><b>Home</b><p>
              </div >
